# arcenstuff-py

./: README.md  pyproject.toml
arcenstuff/pydantic/: __init__.py  errors.py  module_resolver.py  normalizable_model.py  transformable_model.py
arcenstuff/pydantic/examples/: __init__.py  job.py  person.py  pet.py
arcenstuff/pydantic/examples/pets/: cat.py  dog.py
arcenstuff/pydantic/validators/: __init__.py  module_classifier.py  normalizer.py  sub_classifier.py
tests/beet/: beet.yaml
tests/pydantic/: test_classifiers.py  test_normalizable_model.py
