[tool.poetry]
name = "arcenstuff"
version = "0.0.5"
description = "A personal assortment of Python utilities that don't have their own place."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/Arcensoth/arcenstuff-py"
homepage = "https://github.com/Arcensoth/arcenstuff-py"
classifiers = [
    "Private :: Do Not Publish"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
rope = "^0.22.0"
pytest = "^6.2.5"

# Stuff that various independent submodules use.
pydantic = "^1.9.0"
beet = "0.50.7"
mecha = "0.36.3"

[tool.pyright]
typeCheckingMode = "strict"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
